release(v2.2.5): eliminate MemorySegment.reinterpret warning and enable native access